--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_wrongandroid">Приложението е само за Android 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy версия: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework версия: %d</string>
-    <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="app_copyright">Copyright \u00A9 2013-2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Използване</string>
     <string name="menu_refresh">Опресняване</string>
     <string name="menu_settings">Настройки</string>
