--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_wrongandroid">Solo para Android versión 4.0+</string>
     <string name="app_version" formatted="false">Versión de XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Versión de Xposed Framework: %d</string>
-    <string name="app_copyright">Copyright © 2013 por M. Bokhorst (M66B)</string>
+    <string name="app_copyright">Copyright \u00A9 2013-2014 por M. Bokhorst (M66B)</string>
     <string name="menu_usage">Uso</string>
     <string name="menu_refresh">Actualizar</string>
     <string name="menu_settings">Configuración</string>
