--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_wrongandroid">Vain Android versiolle 4.0.3+</string>
     <string name="app_version" formatted="false">XPrivacy versio: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework versio: %d</string>
-    <string name="app_copyright">Tekijänoikeus \u00A9 2013 M. Bokhorst (M66B)</string>
+    <string name="app_copyright">Tekijänoikeus \u00A9 2013-2014 M. Bokhorst (M66B)</string>
     <string name="menu_usage">Käyttötiedot</string>
     <string name="menu_refresh">Päivitä</string>
     <string name="menu_settings">Asetukset</string>
