--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_wrongandroid">Apenas para a versão do Android 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy version: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
-    <string name="app_copyright">Direitos de autor \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="app_copyright">Direitos de autor \u00A9 2013-2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Uso</string>
     <string name="menu_refresh">Atualizar</string>
     <string name="menu_settings">Definições</string>
