--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_wrongandroid">Только для Android версии 4.0 и выше</string>
     <string name="app_version" formatted="false">Версия XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Версия Xposed framework: %d</string>
-    <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="app_copyright">Copyright \u00A9 2013-2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Использование</string>
     <string name="menu_refresh">Обновить</string>
     <string name="menu_settings">Параметры</string>
