--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_wrongandroid">Samo za Android različice 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy različica: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework različica: %d</string>
-    <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="app_copyright">Copyright \u00A9 2013-2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Uporaba</string>
     <string name="menu_refresh">Osveži</string>
     <string name="menu_settings">Nastavitve</string>
