--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_wrongandroid">Тільки для Android версії 4.0 і новіше</string>
     <string name="app_version" formatted="false">Версія XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Версія Xposed framework: %d</string>
-    <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="app_copyright">Copyright \u00A9 2013-2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Використання</string>
     <string name="menu_refresh">Оновити</string>
     <string name="menu_settings">Параметри</string>
