--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_wrongandroid">Chỉ hỗ trợ Android 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy phiên bản: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework phiên bản: %d</string>
-    <string name="app_copyright">Bản quyền \u00A9 2013 thuộc về M. Bokhorst (M66B)</string>
+    <string name="app_copyright">Bản quyền \u00A9 2013-2014 thuộc về M. Bokhorst (M66B)</string>
     <string name="menu_usage">Sử dụng</string>
     <string name="menu_refresh">Làm mới</string>
     <string name="menu_settings">Thiết lập</string>
