--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -20,37 +20,37 @@
     <string name="menu_about">O programu</string>
     <string name="menu_help">Pomoč</string>
     <string name="menu_all">Vse</string>
-    <string name="menu_restriction_all">Toggle restrictions</string>
-    <string name="menu_clear_all">Clear all</string>
-    <string name="menu_restrict_all">Restrict all</string>
-    <string name="menu_clear_usage">Clear</string>
-    <string name="menu_usage_all">Toggle filter</string>
+    <string name="menu_restriction_all">Preklopi omejitve</string>
+    <string name="menu_clear_all">Počisti vse</string>
+    <string name="menu_restrict_all">Omeji vse</string>
+    <string name="menu_clear_usage">Počisti</string>
+    <string name="menu_usage_all">Preklopi filtre</string>
     <string name="menu_apply">Uporabi predlogo</string>
     <string name="menu_clear">Počisti</string>
     <string name="menu_app_launch">Zaženi</string>
     <string name="menu_app_settings">Podrobnosti programa</string>
     <string name="menu_app_store">Trgovina Play</string>
-    <string name="menu_app_kill">Kill</string>
+    <string name="menu_app_kill">Ubij</string>
     <string name="menu_accounts">Izberi dovoljene račune</string>
-    <string name="menu_applications">Select applications to allow</string>
+    <string name="menu_applications">Izberi dovoljene aplikacije</string>
     <string name="menu_contacts">Izberi dovoljene stike</string>
-    <string name="menu_tutorial">Tutorial</string>
+    <string name="menu_tutorial">Navodila</string>
     <string name="msg_new">Novo</string>
     <string name="msg_update">Posodobitev</string>
     <string name="msg_licensed" formatted="false">Licencirano na: %s</string>
     <string name="msg_loading">Nalagam</string>
-    <string name="msg_applying">Applying</string>
-    <string name="msg_applied">Template applied</string>
-    <string name="msg_saved_to" formatted="false">Saved to %s</string>
-    <string name="msg_no_restrictions">No restrictions found</string>
+    <string name="msg_applying">Uveljavljam</string>
+    <string name="msg_applied">Predloga uveljavljena</string>
+    <string name="msg_saved_to" formatted="false">Shranjeno v %s</string>
+    <string name="msg_no_restrictions">Ni bilo najdenih omejitev</string>
     <string name="msg_sure">Ste prepričani?</string>
     <string name="msg_done">Dokončano</string>
     <string name="msg_reboot">Zahtevan ponovni zagon</string>
-    <string name="msg_random_now">Randomize</string>
-    <string name="msg_random_access">Randomize on access</string>
-    <string name="msg_random_boot">Randomize after boot</string>
-    <string name="msg_usage">Updating usage data</string>
-    <string name="msg_restart">Application restart required</string>
+    <string name="msg_random_now">Naključni podatki</string>
+    <string name="msg_random_access">Naključni podatki ob dostopu</string>
+    <string name="msg_random_boot">Naključni podatki ob zagonu</string>
+    <string name="msg_usage">Posodabljam uporabo podatkov</string>
+    <string name="msg_restart">Potreben je ponoven zagon aplikacije</string>
     <string name="msg_first"><b>Za razvoj in preizkušanje programa XPrivacy je bilo vloženo veliko truda, vendar pa
     je nemogoče zagotoviti brezhibno delovanje na vsaki napravi in za vsak program.\n\nUporaba programa je na lastno
     odgovornost</b>\n\nPreberite si tudi licenco:</string>
@@ -69,16 +69,16 @@
     <string name="restrict_messages">Sporočila (SMS, MMS)</string>
     <string name="restrict_network">Omrežje (naslovi)</string>
     <string name="restrict_notifications">Obvestila</string>
-    <string name="restrict_overlay">Overlay</string>
+    <string name="restrict_overlay">Prekrivanje</string>
     <string name="restrict_phone">Telefon (ID, številke, klici)</string>
-    <string name="restrict_sensors">Sensors</string>
+    <string name="restrict_sensors">Senzorji</string>
     <string name="restrict_storage">Pomnilnik (medij, SD kartica)</string>
     <string name="restrict_shell">Lupina (ukazi, superuser)</string>
     <string name="restrict_system">Sistem (nameščeni programi)</string>
     <string name="restrict_view">Pogled (brskalnik)</string>
-    <string name="title_categories">Categories</string>
+    <string name="title_categories">Kategorije</string>
     <string name="title_restrict">Označi za omejitev pravic:</string>
-    <string name="title_filters">Filters</string>
+    <string name="title_filters">Filterji</string>
 
     <plurals name="title_active_filters">
         <item quantity="one">1 aktiven filter</item>
@@ -93,7 +93,7 @@
     <string name="title_frestricted">Filtriraj po omejitvah</string>
     <string name="title_fuser">Filtriraj uporabniške programe</string>
     <string name="title_fsystem">Filtriraj sistemske programe</string>
-    <string name="title_fnot">Negate</string>
+    <string name="title_fnot">Negiraj</string>
     <string name="settings_serial">Serijska št.</string>
     <string name="settings_lat">Geografska širina</string>
     <string name="settings_lon">Geografska dolžina</string>
@@ -101,36 +101,36 @@
     <string name="settings_ip">IP naslov</string>
     <string name="settings_phone">Telefonska številka</string>
     <string name="settings_id">Android ID</string>
-    <string name="settings_adid">Advertisement ID</string>
+    <string name="settings_adid">Oglaševalski ID</string>
     <string name="settings_country">Država</string>
     <string name="settings_operator">Operater</string>
     <string name="settings_subscriber">ID naročnika</string>
     <string name="settings_ua">User agent</string>
-    <string name="settings_general">General</string>
-    <string name="settings_fake_data">Fake data</string>
-    <string name="settings_global">Use global fake data</string>
-    <string name="settings_notify">Update notifications</string>
-    <string name="settings_usage">Android usage data (requires restart)</string>
-    <string name="settings_log">Debug log (zahteva ponovni zagon)</string>
-    <string name="settings_expert">Expert mode</string>
-    <string name="settings_dangerous">Restrict dangerous functions</string>
-    <string name="settings_confidence">Maximum fetch confidence interval</string>
-    <string name="settings_experimental">Experimental functions (requires restart)</string>
+    <string name="settings_general">Splošno</string>
+    <string name="settings_fake_data">Lažni podatki</string>
+    <string name="settings_global">Uporabi lažne podatke globalo</string>
+    <string name="settings_notify">Obvestila ob posodobitvi</string>
+    <string name="settings_usage">Uporaba podatkov Android (zahtevan ponovni zagon)</string>
+    <string name="settings_log">Beleženje za razvijalce (zahteva ponovni zagon)</string>
+    <string name="settings_expert">Način za strokovnjake</string>
+    <string name="settings_dangerous">Omeji nevarne funkcije</string>
+    <string name="settings_confidence">Največji interval prenašanja omejitev</string>
+    <string name="settings_experimental">Funkcije za strokovnjake (zahtevan ponovni zagon)</string>
     <string name="help_application">Program</string>
     <string name="help_internet">uporablja internetne pravice</string>
     <string name="help_granted">uporablja Android pravice</string>
     <string name="help_used">je uporabljal te podatke</string>
     <string name="help_frozen">je onemogočen</string>
     <string name="help_dangerous">je nevaren</string>
-    <string name="help_half">partly restricted</string>
-    <string name="help_attention">restrictions need attention</string>
-    <string name="help_restricted">restrictions are changed</string>
-    <string name="help_shared">restrictions are submitted</string>
-    <string name="tutorial_mainheader">Select the category to restrict; choose visible apps with the filters</string>
-    <string name="tutorial_mainlist">Tap a check box to restrict the selected category for an app\n
-\nApps will be fed empty or fake data for restricted categories\n
-\nTap the app icon for detailed restrictions and settings</string>
-    <string name="tutorial_detailsheader">Tap the app icon for more actions</string>
-    <string name="tutorial_detailslist">Tap the down arrow to see the function exceptions of a restriction category</string>
+    <string name="help_half">delno omejeno</string>
+    <string name="help_attention">omejitve potrebujejo pozornost</string>
+    <string name="help_restricted">omejitve so spremenjene</string>
+    <string name="help_shared">omejitve so poslane</string>
+    <string name="tutorial_mainheader">Izberi kategorijo za omejevanje; izberi vidne aplikacije z uporabo filtrov</string>
+    <string name="tutorial_mainlist">Tapni na potrditveno polje za omejitev izbrane kategorije za aplikacije\n
+\nAplikacije bodo nahranjene s praznimi ali lažnimi podatki za omejene kotegorije\n
+\nTapni ikono aplikacije za podrobnejšo omejevanje in nastavljanje</string>
+    <string name="tutorial_detailsheader">Tapni ikono aplikacije za več možnosti</string>
+    <string name="tutorial_detailslist">Tapni puščico navzdol za pregled izjem funkcij v omejeni kategoriji</string>
 
 </resources>
