--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -30,7 +30,7 @@
     <string name="menu_app_launch">Запустити програму</string>
     <string name="menu_app_settings">Налаштуванная програми</string>
     <string name="menu_app_store">Play Маркет</string>
-    <string name="menu_app_kill">Kill</string>
+    <string name="menu_app_kill">Завершити</string>
     <string name="menu_accounts">Оберіть дозволені облікові записи</string>
     <string name="menu_applications">Оберіть дозволені програми</string>
     <string name="menu_contacts">Оберіть дозволені контакти</string>
@@ -113,8 +113,8 @@
     <string name="settings_log">Отладочный лог (требует перезапуска)</string>
     <string name="settings_expert">Експертний режим</string>
     <string name="settings_dangerous">Заборона небезпечних функцій</string>
-    <string name="settings_confidence">Maximum fetch confidence interval</string>
-    <string name="settings_experimental">Experimental functions (requires restart)</string>
+    <string name="settings_confidence">Максимальний інтервал отримання конфіденційних даних</string>
+    <string name="settings_experimental">Експериментальні функціі (потрібне перезавантаження)</string>
     <string name="help_application">Програма</string>
     <string name="help_internet">запитує доступ до Інтернету</string>
     <string name="help_granted">має дозвол Android</string>
