--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -110,8 +110,8 @@
     <string name="settings_log">偵錯日誌 (需重新啟動)</string>
     <string name="settings_expert">進階模式</string>
     <string name="settings_dangerous">關閉高風險功能</string>
-    <string name="settings_confidence">Maximum fetch confidence interval</string>
-    <string name="settings_experimental">Experimental functions (requires restart)</string>
+    <string name="settings_confidence">最大擷取信賴區間</string>
+    <string name="settings_experimental">實驗性功能 (需重新啟動)</string>
     <string name="help_application">程式</string>
     <string name="help_internet">表示有網際網路權限</string>
     <string name="help_granted">表示有手機權限</string>
