--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -30,7 +30,7 @@
     <string name="menu_app_launch">启动应用</string>
     <string name="menu_app_settings">应用信息</string>
     <string name="menu_app_store">Play 商店</string>
-    <string name="menu_app_kill">Kill</string>
+    <string name="menu_app_kill">强制停止当前应用</string>
     <string name="menu_accounts">选择允许访问的帐号</string>
     <string name="menu_applications">选择允许访问的应用</string>
     <string name="menu_contacts">选择允许访问的联系人</string>
@@ -117,7 +117,7 @@
     <string name="help_application">请输入应用名称</string>
     <string name="help_internet">应用含有联网权限</string>
     <string name="help_granted">应用已申请的权限（ Androidmanifest 中表明）</string>
-    <string name="help_used">应用已使用的权限</string>
+    <string name="help_used">应用曾使用的权限</string>
     <string name="help_frozen">应用已被冻结/停用</string>
     <string name="help_dangerous">可能导致应用异常的权限</string>
     <string name="help_half">已限制部分权限</string>
