--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_wrongandroid">Només per a Android versió 4.0+</string>
     <string name="app_version" formatted="false">Versió d\'XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Versió d\'Xposed framework: %d</string>
-    <string name="app_copyright">Copyright \u00A9 2013-2014 per M. Bokhorst (M66B)</string>
+    <string name="app_copyright">Copyright \u00A9 2013–2014 per M. Bokhorst (M66B)</string>
     <string name="menu_usage">Usos</string>
     <string name="menu_refresh">Refresca</string>
     <string name="menu_settings">Configuració</string>
