--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_wrongandroid">Endast för Android 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy version: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
-    <string name="app_copyright">Copyright \u00A9 2013-2014 M. Bokhorst (M66B)</string>
+    <string name="app_copyright">Copyright \u00A9 2013–2014 M. Bokhorst (M66B)</string>
     <string name="menu_usage">Användning</string>
     <string name="menu_refresh">Uppdatera</string>
     <string name="menu_settings">Inställningar</string>
