--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_wrongandroid">僅支援版本 Android 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy 版本: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework 版本: %d</string>
-    <string name="app_copyright">版權所有 \u00A9 2013-2014 by M. Bokhorst (M66B)</string>
+    <string name="app_copyright">版權所有 \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">操作記錄</string>
     <string name="menu_refresh">重新整理</string>
     <string name="menu_settings">設定</string>
