--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -21,16 +21,16 @@
     <string name="menu_help">Ayuda</string>
     <string name="menu_all">Todas</string>
     <string name="menu_restriction_all">Restringir todo</string>
-    <string name="menu_clear_all">Clear all</string>
-    <string name="menu_restrict_all">Restrict all</string>
-    <string name="menu_clear_usage">Clear</string>
+    <string name="menu_clear_all">Permitir todo</string>
+    <string name="menu_restrict_all">Restringir todo</string>
+    <string name="menu_clear_usage">Limpiar</string>
     <string name="menu_usage_all">Cambiar filtro</string>
     <string name="menu_apply">Aplicar plantilla</string>
     <string name="menu_clear">Borrar</string>
     <string name="menu_app_launch">Ejecutar</string>
     <string name="menu_app_settings">Configuración</string>
     <string name="menu_app_store">Play Store</string>
-    <string name="menu_app_kill">Kill</string>
+    <string name="menu_app_kill">Terminar proceso</string>
     <string name="menu_accounts">Seleccione las cuentas permitidas</string>
     <string name="menu_applications">Seleccione las aplicaciones permitidas</string>
     <string name="menu_contacts">Seleccione los contactos permitidos</string>
@@ -39,8 +39,8 @@
     <string name="msg_update">Actualizar</string>
     <string name="msg_licensed">Con licencia para: %s</string>
     <string name="msg_loading">Cargando</string>
-    <string name="msg_applying">Applying</string>
-    <string name="msg_applied">Template applied</string>
+    <string name="msg_applying">Aplicando</string>
+    <string name="msg_applied">Plantilla aplicada</string>
     <string name="msg_saved_to" formatted="false">Guardado en %s</string>
     <string name="msg_no_restrictions">No se han encontrado restricciones</string>
     <string name="msg_sure">¿Estas seguro?</string>
@@ -49,8 +49,8 @@
     <string name="msg_random_now">Selección aleatoria</string>
     <string name="msg_random_access">Inventar al acceder</string>
     <string name="msg_random_boot">Inventar en el arranque</string>
-    <string name="msg_usage">Updating usage data</string>
-    <string name="msg_restart">Application restart required</string>
+    <string name="msg_usage">Actualizando uso de datos</string>
+    <string name="msg_restart">Reinicio de aplicación requerido</string>
     <string name="msg_first"><b>Se ha puesto mucho cuidado en el desarrollo y pruebas de XPrivacy,
 sin embargo no puedo garantizar que funcione sin ningún fallo para cada dispositivo y aplicación.
 \n\nÚselo bajo su responsabilidad.</b>\n\nVéase también el permiso:</string>
@@ -113,22 +113,22 @@ sin embargo no puedo garantizar que funcione sin ningún fallo para cada disposi
     <string name="settings_expert">Modo experto</string>
     <string name="settings_dangerous">Denegar funciones peligrosas</string>
     <string name="settings_confidence">Maximum fetch confidence interval</string>
-    <string name="settings_experimental">Experimental functions (requires restart)</string>
+    <string name="settings_experimental">Funciones experimentales (requiere reinicio)</string>
     <string name="help_application">Aplicación</string>
-    <string name="help_internet">has internet permission</string>
+    <string name="help_internet">Tiene acceso a Internet</string>
     <string name="help_granted">Tiene permisos Android</string>
     <string name="help_used">Ha usado estos datos</string>
     <string name="help_frozen">Esta deshabilitado</string>
     <string name="help_dangerous">Es peligroso, restringirlo puede causar problemas</string>
     <string name="help_half">Restringido parcialmente</string>
-    <string name="help_attention">restrictions need attention</string>
-    <string name="help_restricted">restrictions are changed</string>
-    <string name="help_shared">restrictions are submitted</string>
-    <string name="tutorial_mainheader">Select the category to restrict; choose visible apps with the filters</string>
-    <string name="tutorial_mainlist">Tap a check box to restrict the selected category for an app\n
-\nApps will be fed empty or fake data for restricted categories\n
-\nTap the app icon for detailed restrictions and settings</string>
-    <string name="tutorial_detailsheader">Tap the app icon for more actions</string>
-    <string name="tutorial_detailslist">Tap the down arrow to see the function exceptions of a restriction category</string>
+    <string name="help_attention">Las restricciones requieren su atención</string>
+    <string name="help_restricted">Restricciones cambiadas</string>
+    <string name="help_shared">Restricciones subidas</string>
+    <string name="tutorial_mainheader">Seleciona la categoría que quieras restringir; elige las aplicaciones visibles con los filtros</string>
+    <string name="tutorial_mainlist">Pulsa un check box para restringir la categoría seleccionada para la aplicación\n
+\nLas aplicaciones no recibirán información o se les proporcionará información falsa\n
+\nPulsa el icono de la aplicación para ver las restricciones detalladas y algunas opciones</string>
+    <string name="tutorial_detailsheader">Pulsa el icono de la aplicación para ver más opciones</string>
+    <string name="tutorial_detailslist">Pulsa una flecha para ver las funciones que engloba la categoría</string>
 
 </resources>
