--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -28,7 +28,7 @@
     <string name="menu_apply">套用默认权限模板</string>
     <string name="menu_clear">清除所有权限限制</string>
     <string name="menu_app_launch">启动应用</string>
-    <string name="menu_app_settings">应用信息</string>
+    <string name="menu_app_settings">设置模拟信息</string>
     <string name="menu_app_store">Play 商店</string>
     <string name="menu_app_kill">强制停止当前应用</string>
     <string name="menu_accounts">选择允许访问的帐号</string>
